ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.14, 3.4.4, 3.5.3
    • Affects Version/s: 3.4.1
    • Component/s: Sharding
    • Fully Compatible
    • ALL
    • v3.4, v3.2
    • Hide

      I was not able to reproduce so far.

      Show
      I was not able to reproduce so far.
    • Query 2017-02-13
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We were running a stress test on a distributed sharded cluster (8 shards, 7 replicas, on 5 AWS regions), checking behaviour when killing different parts of the cluster.

      We setup 5 application servers (1 per region) with mongos on the same server.

      One of the mongos from where we were running the tests crashed after we killed some processes (including some config servers).

      The message when crashing was :
      Invariant failure remote.status.isOK() src/mongo/s/query/async_results_merger.cpp 345

      Attached is the mongos log.

      Tests started at 15:47 after sharding the collection "renault"

            Assignee:
            David Storch
            Reporter:
            Remi Forest (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: