SERVER-27701 fix race in AsyncResultsMerger error handling

(cherry picked from commit 5a35a6c425b815ecf7795d8e2706b9f3e82c7ce6)